--- a/reustaracja.html
+++ b/reustaracja.html
@@ -14,7 +14,7 @@
             <section id="right_panel">
                 <h4>U nas dobrze zjesz!</h4>
                 <ol>Obiady od 40 zł</ol>
-            </section>s
+            </section>
             <section></section>
             <section></section>
      </body>
